--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.section{
+  justify-content: space-evenly;
+  width: 100%;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.content{
+  width: 100%;
+  border: 2px solid rgb(54, 54, 54);
+  box-shadow: 0px 1px 7px 3px grey;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-grp{
+  margin-bottom: 15px;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-grp button{
+  margin-right: 15px;
+}
+
+.nav-link{
+  text-decoration: none;
 }
